--- a/lib/l10n/arb/app_es.arb
+++ b/lib/l10n/arb/app_es.arb
@@ -1,7 +1,20 @@
 {
     "@@locale": "es",
-    "counterAppBarTitle": "Contador",
-    "@counterAppBarTitle": {
-        "description": "Texto mostrado en la AppBar de la página del contador"
+    "issueAppBarTitle": "Flutter issues",
+    "@issueAppBarTitle": {
+        "description": "Texto mostrado en la AppBar de la página de las Issues"
+    },
+    "genericError": "Oops! Algo ha pasado",
+    "@genericError": {
+        "description": "Text mostrado cuando hay un error"
+    },
+    "filterInputLabel": "Filtros",
+    "@filterInputLabel": {
+        "description": "Text mostrado como label del input de filtros"
+    },
+    "filterInputHint": "states:open || states:closed",
+    "@filterInputHint": {
+        "description": "Text mostrado como ayuda del input de filtros"
     }
+
 }
